# CoAPartyBot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.template.json
cogs/: giveaway.py  ranking.py  util.py  wiki.py
